# energy-availability-broker

./: .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CITATION.cff  README.md  app.py  pyproject.toml
.gitlab/docker/: Dockerfile  build_and_push_docker.bat  build_and_push_docker.ps1  build_and_push_docker.sh  portainer-stack.yml
.gitlab/issue_templates/: mytemplate.md
energy_availability_broker/: config.py  dayahead_forecast.py  dayahead_forecast_utils.py  demand_forecast.py  dev_cli.py  energy_availability.py  energy_broker.py  env_utils.py  flmp_demand_forecast.py  main.py  non_production_forecast.py  non_production_forecast_utils.py  retrain_cli.py  supply_forecast.py
energy_availability_broker/models/non_production_forecast_48/: xgb_h02.json  xgb_h08.json  xgb_h14.json  xgb_h15.json  xgb_h22.json  xgb_h25.json  xgb_h26.json  xgb_h32.json
energy_availability_broker/results/: demand_forecast_2025-11-12.json
energy_information_service/: dam_forecast.py  dayahead_forecast.py  dayahead_forecast_utils.py  demand_forecast.py  energy_availability.py  energy_broker.py  env_utils.py  flmp_demand_forecast.py  forecast.py  forecast_utils.py  forecastsolar_utils.py  main.py  non_production_forecast.py  non_production_forecast_utils.py  price_service_test.ipynb  retrain.py  retrain_cli.py  services.py  supply_forecast.py  type_annotations.py
energy_information_service/data/: TimeReconstructedOptimizedEfdmFlmp_2025-11-13.json
energy_information_service/models/: xgb_daily_model.pkl
energy_information_service/models/non_production_forecast_48/: xgb_h01.json  xgb_h03.json  xgb_h04.json  xgb_h07.json  xgb_h18.json  xgb_h21.json  xgb_h23.json  xgb_h34.json  xgb_h35.json  xgb_h36.json  xgb_h39.json  xgb_h41.json  xgb_h42.json  xgb_h44.json  xgb_h46.json  xgb_h47.json
energy_information_service/models/outprod_forecast_48/: feature_columns.json  xgb_h05.json  xgb_h06.json  xgb_h09.json  xgb_h10.json  xgb_h11.json  xgb_h12.json  xgb_h13.json  xgb_h16.json  xgb_h17.json  xgb_h19.json  xgb_h20.json  xgb_h24.json  xgb_h27.json  xgb_h28.json  xgb_h29.json  xgb_h30.json  xgb_h31.json  xgb_h33.json  xgb_h37.json  xgb_h38.json  xgb_h40.json  xgb_h43.json  xgb_h45.json  xgb_h48.json
energy_information_service/price_service/: __init__.py  price_service_agent.py
energy_information_service/results/: supply_forecast_2026-03-30.json
notebooks/: energy_analysis_offline.ipynb
test/: test_dayahead_forecast_utils.py  test_demand_forecast.py  test_energy_availability.py  test_flmp_demand_forecast.py  test_forecastsolar_utils.py  test_main.py  test_non_production_forecast_utils.py
